# conexio-cloud-sdk

./: CMakeLists.txt  Kconfig  README.md
include/conexio_cloud/: conexio_cloud.h
samples/: README.md
samples/app/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/app/boards/: conexio_stratus_pro_nrf9151_ns.overlay
samples/app/src/: main.c
samples/fleet-provisioning/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/fleet-provisioning/src/: cert_store.c  cert_store.h  main.c  provision.c  provision.h  uart_commissioning.c  uart_commissioning.h
samples/fleet-provisioning/src/certs/: .gitkeep
samples/http/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/http/src/: main.c
samples/mqtt/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/mqtt/src/: aws_certs.c  aws_certs.h  main.c
samples/mqtt/src/certs/: .gitkeep
src/: cert_store.c  cert_store.h  conexio_cloud.c  config_fetch.c  config_fetch.h  fota.c  fota.h  lte.c  lte.h  offline_buffer.c  offline_buffer.h  power_mgr.c  power_mgr.h  retry.c  retry.h  transport.h
src/transport/: http_transport.c  mqtt_transport.c
zephyr/: module.yml
